为 "profiling" 一词作脚注.

--- a/experiments_with_algorithms.tex
+++ b/experiments_with_algorithms.tex
@@ -706,12 +706,13 @@ $n \log n$ 程序性能之间的差距急剧加大.
     数值组成, 或者是一些看起来不太像数值的字符串, 那么是否还成立 ?
 \end{exercise}
 
-% TODO "profiling" 这个词很难翻译, 我就把它译作 "剖析"
 \section{剖析}
 \label{sec:profiling}
 
 在上一节中, 为了评价排序程序的性能, 我们计算了特定操作的执行次数. 评价
-程序性能的另一个有效方法是对程序进行剖析, 也就是计算每条语句的执行次数.
+程序性能的另一个有效方法是对程序进行剖析\footnote{``profiling'' 这个词 
+很难翻译, 我就把它译作 ``部析'' 得了. --- 译者注},
+也就是计算每条语句的执行次数.
 许多编程环境都会提供一个称为 \cterm{剖析器} (\term{profiler}) 的工具
 程序, 剖析器可以打印某个程序中每条语句的执行次数.
 
