索引分为三栏, 字号设置为 \footnotesize
\footnotesize 似乎有点太小了

--- a/index.tex
+++ b/index.tex
@@ -5,8 +5,8 @@
 \marginpar{205}
 索引中的页码指的是英文原版的页码, 与本书页边标注的页码一致.
 
-\begin{multicols}{2}
-
+\begin{multicols}{3}
+\footnotesize
 \verb'&&' AND operator 10, 31, 37, 158
 
 \verb'%=' assignment operator 38
