--- a/experiments_with_algorithms.tex
+++ b/experiments_with_algorithms.tex
@@ -743,3 +743,23 @@ $n \log n$ 程序性能之间的差距急剧加大.
 	    t = A[i]; A[i] = A[j]; A[j] = t
 	}
 \end{awkcode}
+
+我们实现的剖析器最重要的特点是简单, 但这同时也是它最大的缺点. 程序 
+\texttt{makeprof} 盲目地在每一行的第一个左花括号的右边插入计数语句,
+一个更好的做法是忽略字符串常量, 正则表达式和注释中的左花括号. 除了语句的
+执行次数, 最好还要报告语句的执行时间, 但是这里介绍的方法还无法做到这
+一点.
+
+\begin{exercise}
+    修改剖析器, 使得程序不会在字符串常量, 正则表达式或者注释中插入计数
+    语句. 你实现的剖析器是否允许对自身进行剖析?
+\end{exercise}
+
+\begin{exercise}
+    如果 \texttt{END} 动作中包含 \texttt{exit} 语句, 那么剖析器就无法
+    正常地工作, 请问这是为什么 ? 修复这个问题.
+\end{exercise}
+
+\marginpar{170}
+\section{拓扑排序}
+\label{sec:topological_sorting}
