translate part of page 170/210

--- a/experiments_with_algorithms.tex
+++ b/experiments_with_algorithms.tex
@@ -763,3 +763,13 @@ $n \log n$ 程序性能之间的差距急剧加大.
 \marginpar{170}
 \section{拓扑排序}
 \label{sec:topological_sorting}
+
+在工程建筑项目中, 有些工作必须在其他工作开始前完成. 为了方便说明, 我们通常
+会把这些工作都列出来, 这样就可以很容易地看出哪些工作必须在其他工作完成后
+才能开始. 在一个程序库中, 程序 \texttt{a} 可能会调用程序 \texttt{h},
+\texttt{h} 也有可能会调用程序 \texttt{d}  和 \texttt{e}, 等等. 我们可能
+希望对程序进行排序, 使得程序在它调用的所有程序之前出现 (Unix 命令
+\texttt{lorder} 可以完成这个工作). 这些, 以及其他类似的问题都是
+\cterm{拓扑排序} (\term{topological sorting}) 问题的实例: 找到一个顺序,
+该顺序满足一个约束条件集合, 集合中的每个条件都具有形式 ``\texttt{x} 必须
+在 \texttt{y} 之前出现''. 在一个拓扑排序中, 任何一个线序, 只要它满足
