complete index in page 207/210

--- a/index.tex
+++ b/index.tex
@@ -11,7 +11,7 @@
 
 \verb'%=' assignment operator 38
 
-\verb'*=' assignment operator 38 
+\verb'*=' assignment operator 38
 
 \verb'+=' assignment operator 38
 
@@ -19,7 +19,7 @@
 
 \verb'/=' assignment operator 38
 
-\verb'^=' assignment operator 38 
+\verb'^=' assignment operator 38
 
 \verb'=' assignment operator 38, 44
 
@@ -27,17 +27,17 @@
 
 \verb'{'...\verb'}' braces 15, 22, 47, 167, 188
 
-\verb'#' comment 15, 22, 188 
+\verb'#' comment 15, 22, 188
 
 \verb'>' comparison operator 9
 
 \verb'>=' comparison operator 9
 
-\verb'==' comparison operator 9, 44 
+\verb'==' comparison operator 9, 44
 
-\verb'?:' conditional expression 37, 68 
+\verb'?:' conditional expression 37, 68
 
-\verb',' continuation after 22, 188 
+\verb',' continuation after 22, 188
 
 \verb'--' decrement operator 39, 70, 112
 
@@ -55,19 +55,19 @@
 
 \verb'|' input pipe 62, 76
 
-\verb'~' match operator 25, 27, 31, 37, 40 
+\verb'~' match operator 25, 27, 31, 37, 40
 
 \verb'!~' nonmatch operator 25, 27, 31, 37, 40
 
 \verb'!' NOT operator 10, 31, 37
 
-\verb'||' OR operator 10, 31, 37 
+\verb'||' OR operator 10, 31, 37
 
 \verb'>' output redirection 56, 58, 188
 
 \verb'>>' output redirection 56, 58, 188
 
-\verb'|' output redirection 58, 188 
+\verb'|' output redirection 58, 188
 
 \verb"' '" quotes 2, 4-5, 65, 100
 
@@ -79,7 +79,7 @@
 
 \verb'()' regular expression 29
 
-\verb'['...\verb']' regular expression 29 
+\verb'['...\verb']' regular expression 29
 
 \verb'[^'...\verb']' regular expression 29
 
@@ -89,7 +89,7 @@
 
 \verb'+' regular expression 30
 
-\verb'?' regular expression 30 
+\verb'?' regular expression 30
 
 \verb'%' remainder operator 36, 46
 
@@ -101,45 +101,45 @@
 
 \verb'$0' at end of input 13
 
-\verb'$0' blank line 192 
+\verb'$0' blank line 192
 
-\verb'$0' record variable 5, 35 
+\verb'$0' record variable 5, 35
 
-\verb'$0', side-effects on 36 43 
+\verb'$0', side-effects on 36 43
 
-\verb'\007' bell character 31 
+\verb'\007' bell character 31
 
-\verb'\b' backspace character 31 
+\verb'\b' backspace character 31
 
-\verb'/dev/tty' file 59 
+\verb'/dev/tty' file 59
 
-\verb'-f' option 4-5, 63, 65, 187 
+\verb'-f' option 4-5, 63, 65, 187
 
-\verb'-F' option 60, 63, 187 
+\verb'-F' option 60, 63, 187
 
-\verb'>'\textit{file}, \verb'print' 90, 188 
+\verb'>'\textit{file}, \verb'print' 90, 188
 
-\verb'#include' processor 62, 64 
+\verb'#include' processor 62, 64
 
-\verb'$'\textit{n} field 5, 35 
+\verb'$'\textit{n} field 5, 35
 
 \verb'\n' newline character 8, 31, 79
 
-$\pi$, computation of 39 
+$\pi$, computation of 39
 
-\verb'\t' tab character 15, 24, 31 
+\verb'\t' tab character 15, 24, 31
 
-\verb'$x++' versus \verb'$(x++)' 146 
+\verb'$x++' versus \verb'$(x++)' 146
 
-action, default 5, 9, 21, 187 
+action, default 5, 9, 21, 187
 
-actions, summary of 34, 188 
+actions, summary of 34, 188
 
-add checks and deposits 87 
+add checks and deposits 87
 
 \verb'addcomma' program 72, 194
 
-address list 82 
+address list 82
 
 address list, sorting 84
 
@@ -147,9 +147,9 @@ aggregation 51, 58, 119
 
 Aho, A. V. 130, 152, 179, 186
 
-Aho, S. vi 
+Aho, S. vi
 
-Akkerhuis, J. vi 
+Akkerhuis, J. vi
 
 algorithm, depth-first search 172, 177
 
@@ -233,7 +233,7 @@ assignment operator, \verb'^=' 38
 
 assignment operator, \verb'=' 38, 44
 
-assignment operators 38 
+assignment operators 38
 
 assignment, side-effects of 43
 
@@ -284,7 +284,7 @@ Bentley, J. L. vi, 130, 152, 179
 
 binary tree 163
 
-blank line, \verb'$0' 192 
+blank line, \verb'$0' 192
 
 blank line, printing a 11, 55
 
@@ -348,7 +348,7 @@ checks and deposits, add 87
 
 checks, printing 74
 
-Cherry, L. L. vi 
+Cherry, L. L. vi
 
 \verb'chmod' command 65
 
@@ -647,4 +647,372 @@ field separator, input 24, 35, 39, 60
 field separator, newline as 61, 83-84
 
 field separator, output 6, 35, 39, 55-56
+
+field separator, regular expression 52, 60, 80, 135
+
+field variables 35
+
+fields, named 102, 107
+
+file, \verb'capitals' 102
+
+file, \verb'countries' 22
+
+file, \verb'/dev/tty' 59
+
+file, \verb'emp.data' 1
+
+file, \verb'executable' 65
+
+file, standard error 59
+
+file, standard input 59, 66
+
+file, standard output 5, 56
+
+file updating 175
+
+filename, \verb'-' standard input 64, 116
+
+\verb'FILENAME' variable 33, 35-36, 81, 103
+
+fixed-field input 72
+
+floating-point number, regular expression for 30, 40
+
+floating-point precision 35, 191
+
+Floyd, R. W. 162, 198
+
+\verb'fmt' program 120
+
+\verb'fmt.just' program 202
+
+\verb'FNR' variable 33, 35-36, 61
+
+\verb'for' ... in statement 51
+
+\verb'for(;;)' infinite loop 49, 113
+
+\verb'for' statement 16, 49
+
+form letters 100
+
+form of awk program 2, 21, 187
+
+\verb'form1' program 91
+
+\verb'form2' program 92
+
+\verb'form3' program 94
+
+\verb'form4' program 96
+
+formal parameters 54
+
+format, program 11, 22, 34, 47, 53, 188
+
+formatting, table 95
+
+\verb'form.gen' program 101
+
+Forth language 142
+
+Fraser, C. W. vi
+
+\verb'FS' variable 24, 35-36, 52, 60, 83, 135, 187
+
+function arguments 54
+
+function, \verb'asplit' 81
+
+function, \verb'atan2' 39
+
+function, \verb'check' 155
+
+function, \verb'choose' 112
+
+function, \verb'cos' 39
+
+function, \verb'daynum' 194
+
+function definition 53, 187
+
+function, \verb'dfs' 173
+
+function, \verb'error' 118, 149, 178
+
+function, \verb'exp' 39
+
+function, \verb'getline' 61, 182, 188
+
+function, \verb'gsub' 42, 71, 101, 119, 122, 182
+
+function, \verb'heapify' 163, 165
+
+function, \verb'hsort' 165
+
+function, \verb'index' 41
+
+function, \verb'int' 39-40
+
+function, \verb'isort' 154
+
+function, \verb'length' 13-14
+
+function, \verb'log' 39
+
+function, \verb'match' 35, 41, 149, 182, 189, 196
+
+function, \verb'max' 53
+
+function, \verb'numtowords' 76, 194
+
+function, \verb'permute' 199
+
+function, \verb'prefix' 105
+
+function, \verb'qsort' 161
+
+function, \verb'rand' 40, 111
+
+function, \verb'randint' 111
+
+function, \verb'randlet' 112
+
+function, \verb'recursive' 54, 71, 76, 115, 160
+
+function, \verb'sin' 39
+
+function, \verb'split' 41, 52-53, 76, 80, 84, 192
+
+function, \verb'sprintf' 42, 76, 88, 189
+
+function, \verb'sqrt' 39
+
+function, \verb'srand' 40, 111
+
+function, \verb'sub' 42, 182
+
+function, \verb'subset' 109
+
+function, \verb'substr' 43, 72
+
+function, \verb'suffix' 105
+
+function, \verb'system' 59, 64
+
+function, \verb'unget' 105
+
+function with counters, isort 158
+
+function, summary of arithmetic 190
+
+function, summary of string 190
+
+function, table of arithmetic 39
+
+function, table of string 42
+
+function, user-defined 53, 182, 187
+
+generation, program v, 79, 121, 167
+
+generator, \verb'lex' lexical analyzer 152, 181, 186
+
+generator, \verb'yacc' parser 152, 175
+
+\verb'getline' error return 61-62
+
+\verb'getline' forms, table of 62
+
+\verb'getline' function 61, 182, 188
+
+\verb'getline', side-effects of 61
+
+global variables 54, 116
+
+grammar, arithmetic expression 145
+
+grammar, awk 148
+
+grammar, contex-free 113, 145, 148
+
+\verb'grap' language 139, 152
+
+graph, constraint 170
+
+graph cycle 171, 173-174, 177
+
+graph, dependency 176
+
+\verb'graph' language 135
+
+\verb'graph' program 137
+
+\verb'grep' command v, 181, 184
+
+Griswold, M. 186
+
+Griswold, R. 186
+
+Grosse, E. H. vi
+
+\verb'gsub' function 42, 71, 101, 119, 122, 182
+
+Gusella, R. vi
+
+happiness 30
+
+Hardin, R. H. 130
+
+headers, records with 85
+
+\verb'heapify' function 163, 165
+
+heapsort algorithm 162
+
+heapsort performance 165
+
+heapsort, profiling 168-169
+
+Herbst, R. T. vi
+
+\verb'histogram' program 70, 193
+
+Hoare, C. A. R. 160
+
+Hopcroft, J. E. 179
+
+\verb'hsort' function 165
+
+ICON language 186
+
+\verb'if-else' statement 14, 47
+
+implementation limits 59, 61-62, 191
+
+\verb'in' operator 52, 192
+
+increment operator, \verb'++' 39, 146, 158
+
+\verb'index' function 41
+
+index, KWIC 122
+
+indexing 124
+
+indexing pipeline 129
+
+infinite loop, \verb'for(;;)' 49, 113
+
+infix notation 142, 145
+
+\verb'info' program 100
+
+initialization, default 12-13, 35, 38, 45, 50-51, 54, 68, 181
+
+initializing \verb'rand' 111
+
+input field separator 24, 35, 39, 60
+
+input file, standard 59, 66
+
+input filename, \verb'-' standard 64, 116
+
+input, fixed-field 72
+
+input line \verb'$0' 5
+
+input pipe, \verb'|' 62, 76
+
+input pushback 105, 110
+
+input, side-effects of 35
+
+input-output, summary of 188
+
+inserting commas 71
+
+insertion sort algorithm 153
+
+insertion sort performance 158
+
+\verb'int' function 39-40
+
+integer, rounding to nearest 40
+
+interactive test program 157
+
+interactive testing 156
+
+\verb'interest' program 15 
+
+\verb'isort' function 154
+
+\verb'isort' function with counters 158
+
+\verb'ix.collapse' program 126
+
+\verb'ix.format' program 129 
+
+\verb'ix.genkey' program 128 
+
+\verb'ix.rotate' program 127 
+
+\verb'ix.sort1' program 126
+
+\verb'ix.sort2' program 128 
+
+\verb'join' command 104
+
+join, natural 103
+
+\verb'join' program 104
+
+justification, test 98, 201
+
+Kernighan, B. W. 66, 130, 152, 186
+
+Kernighan, M. D. vi 
+
+Knuth, Donald Ervin 82, 179, 198
+
+KWIC index 122
+
+\verb'kwic' program 123, 203
+
+language, asembly 133
+
+language features, new v, 79, 182
+
+language, Forth 142
+
+language, \verb'grap' 139, 152
+
+language, \verb'graph' 135
+
+language, ICON 186
+
+language, pattern-directed 138, 140, 152, 156, 181
+
+language, \verb'pic' 139
+
+language, Postscript 142
+
+language processor model 131
+
+language, \textit{q} query 102, 107
+
+language, query 99
+
+language, REXX 186
+
+language, SNOBOL4 50, 182, 186
+
+language, \verb'sortgen' 140
+
+leap year computation 194
+
+leftmost longest match 42, 60, 80
 \end{multicols}
