get syntax right up to page 170/210

--- a/experiments_with_algorithms.tex
+++ b/experiments_with_algorithms.tex
@@ -782,7 +782,7 @@ $n \log n$ 程序性能之间的差距急剧加大.
 如果存在一条边, 从 \textit{x} 指向 \textit{y}, 那么 \textit{x} 就是
 \textit{y} 的 \cterm{前驱} (\term{predecessor}), \textit{y} 是 \textit{x}
 的 \cterm{后继} (\term{successor}). 假设约束条件用 前驱-后继 对来表示,
-其中每个输入行的 \textit{x} 和 \textt{y} 表示一条从结点 \textit{x} 指向 
+其中每个输入行的 \textit{x} 和 \textit{y} 表示一条从结点 \textit{x} 指向 
 \textit{y} 的边, 上面那张图的文本表示形式是:
 \begin{file}
     a   h
