review stop at page 170/210

--- a/preamble.tex
+++ b/preamble.tex
@@ -27,6 +27,8 @@
 \usepackage[perpage]{footmisc}
 % 插图所需的宏包
 \usepackage{graphicx}
+% 
+\usepackage[all, pdf]{xy}
 
 % 脚注编号带圈
 \renewcommand\thefootnote{\ding{\numexpr171+\value{footnote}}}
