complete index in page 208/210

--- a/index.tex
+++ b/index.tex
@@ -1015,4 +1015,368 @@ language, \verb'sortgen' 140
 leap year computation 194
 
 leftmost longest match 42, 60, 80
+
+\verb'length' function 13-14
+
+letters, form 100
+
+\verb'lex' lexical analyzer generator 152, 181, 186
+
+lexical analysis 131, 133
+
+limits, implementation 59, 61-62, 191
+
+Linderman. J. P. vi
+
+linear algorithm 157, 183
+
+linear order 170
+
+lines versus records 21, 60
+
+little languages iv-v, 131, 152, 156, 159
+
+local variables 54, 116, 182
+
+\verb'log' function 39
+
+logarithm, computation of base-10 39
+
+logical expression, value of 37
+
+logical operators 10, 31, 37
+
+logical operators, precedence of 32
+
+long statements, continuing 15, 22, 188
+
+\verb'lorder' command 170
+
+\verb'ls' command 177
+
+Lukasiewicz. J. 142
+
+machine dependency 35-36, 44-45, 51, 183
+
+\verb'make' command 175
+
+\verb'make' program 178
+
+\verb'make' update algorithm 176
+
+\verb'makefile' dependency description 175
+
+\verb'makeprof' program 167
+
+manuscripts, cross-references in 120
+
+Martin, R. L. vi
+
+\verb'match' function 35,41,149,182, 189, 196
+
+match, leftmost longest 42, 60, 80
+
+match operator, \verb'~' 25, 27, 31, 37, 40
+
+\verb'max' function 53
+
+Mcllroy. M. D. vi, 130
+
+metacharacters, regular expression 28, 191
+
+Miller. W. 179
+
+model, language processor 131
+
+Moscovitz. H. S. vi
+
+MS-DOS vi, 26
+
+multidimensional arrays 52, 108, 114, 116, 182
+
+multifile database 102
+
+multiline records iv, 60-61, 82
+
+multiple assignment 39
+
+multiple \verb'BEGIN' and \verb'END' 23, 169
+
+Myers. E. 179
+
+$n \log n$ algorithm 162, 165
+
+named fields 102, 107
+
+names, rules for variable 35
+
+name-value data 86
+
+natural join 103
+
+new language features v, 79, 182
+
+newline as neld separator 61,  83-84
+
+newline character, \verb'\n' 8,31,79
+
+\verb'next' statement 49
+
+\verb'NF', side-effects on 36, 61
+
+\verb'NF' variable 6, 14, 35-36, 61
+
+\verb'nm' command 73
+
+\verb'nm.format' program 74
+
+
+nonexistent field 36, 45, 192
+
+nonmatch operator, \verb'!~' 25, 27, 31, 37, 40
+
+nonterminal symbol 113.145
+
+NOT operator, \verb'!' 10,31,37
+
+notation, exponential 35
+
+notation, infix 142, 145
+
+notation, reverse-Polish 142
+
+\verb'NR' variable 6, 12, 14, 35-36, 61
+
+null string 13,24,42, 114, 192
+
+number, coercion to 45
+
+number or string 44
+
+number, regular expression for floating-point 30,40
+
+number to string coercion 25
+
+number to string conversion 35,  44, 192
+
+numbers to words, convert 76
+
+numeric comparison 25-26, 44
+
+numeric constant 35
+
+numeric subscripts 52
+
+numeric value of a string 45
+
+numeric variables 44
+
+\verb'numtowords' function 76, 194
+
+\verb'OFMT' variable 36,45
+
+\verb'OFS' variable 35-36, 43, 55-56
+
+one-liners 17, 181
+
+operator, \verb'&&' AND 10,31,37, 158
+
+operator, \verb'%=' assignment 38
+
+operator, \verb'*=' assignment 38
+
+operator, \verb'+=' assignment 38
+
+operator, \verb'-=' assignment 38
+
+operator, \verb'/=' assignment 38
+
+operator, \verb'^=' assignment 38
+
+operator, \verb'=' assignment 38, 44
+
+operator, \verb'>' comparison 9
+
+operator, \verb'>=' comparison 9
+
+operator, \verb'==' comparison 9, 44
+
+operator, \verb'—-' decrement 39, 70, 112
+
+operator, \verb'^' exponentiation 15, 36, 46
+
+operator, \verb'++' increment 39, 146, 158
+
+operator, \verb'~' match 25, 27, 31, 37, 40
+
+operator, \verb'!~' nonmatch 25, 27, 31,37,40
+
+operator, \verb'~' NOT 10, 31. 37
+
+operator, \verb'||' OR 10,31,37
+
+operator, \verb'%' remainder 36, 46
+
+operator, concatenation 40, 43,  182
+
+operator, \verb'in' 52, 192
+
+operators, arithmetic 36, 44
+
+operators, assignment 38
+
+operators, associativity of 46
+
+operators, comparison 36
+
+operators, logical 10, 31, 37
+
+operators, precedence of 46
+
+operators, precedence of regular expression 30
+
+operators, relational 25, 37
+
+operators, summary of 190
+
+operators, table of arithmetic 46
+
+operators, table of comparison 25
+
+option, \verb'-f' 4-5,63,65, 187
+
+option, \verb'-F' 60,63, 187
+
+OR operator, \verb'||' 10, 31, 37
+
+\verb'ORS' variable 36, 55-56, 83
+
+output field separator 6, 35, 39, 55-56
+
+output file, standard 5, 56
+
+output into pipes 8, 58
+
+output record separator 6, 55-56,  83
+
+output redirection, \verb'>' 56, 58, 188
+
+output redirection, \verb'>>' 56, 58, 188
+
+output redirection, \verb'|' 58, 188
+
+output statements, summary of 55
+
+\verb'p12check' program 77
+
+parameter, array 54
+
+parameter list 53, 116
+
+parameter, scalar 54
+
+parameters, formal 54
+
+parenthesis-free notation 142
+
+Parnas, D. L. 123, 130
+
+parser generator, \verb'yacc' 152, 175
+
+parsing, recursive-descent 145, 147-148
+
+partial order 170
+
+partitioning step, quicksort 160
+
+\verb'passwd' program 78
+
+password file, check 78
+
+pattern, \verb'BEGIN' 11,23,63
+
+pattern, \verb'END' 11,23,49
+
+pattern, range 32, 85, 187
+
+pattern, string-matching 26
+
+pattern-action cycle 3, 21
+
+pattern-action statement iii, 2, 21, 34, 53, 187
+
+pattern-directed language 138,  140, 152, 156, 181
+
+patterns, compound 31
+
+patterns, summary of 23, 187
+
+patterns, summary of string-matching 27
+
+patterns, table of 33
+
+\verb'percent' program 70
+
+performance, heapsort 165
+
+performance, insertion sort 158
+
+performance measurements, table of 183
+
+performance, quicksort 162
+
+\verb'permute' function 199
+
+\verb'pic' language 139
+
+Pike, R. 66
+
+pipe, \verb'|' input 62, 76
+
+pipeline, indexing 129
+
+Pipes, output into 8, 58
+
+Poage, J. 186
+
+Polish notation 142
+
+Polonsky, I. 186
+
+Postscript language 142
+
+\verb'pr' command 175
+
+\verb'prchecks' program 75
+
+precedence of logical operators 32
+
+precedence of operators 46
+
+precedence of regular expression operators 30
+
+precision, floating-point 35, 191
+
+predecessor node 170
+
+\verb'prefix' function 105
+
+\verb'prep1' program 90
+
+\verb'prep2' program 91
+
+\verb'prep3' program 93
+
+primary expressions 34
+
+\verb'print >'\textit{file} 90, 188
+
+\verb'print' statement 5, 55
+
+\verb'printf', \verb'%%' in 79
+
+\verb'printf' examples, table of 57
+
+\verb'printf' specifications, summary of 189
+
 \end{multicols}
