change a TODO to FIXME in page 170/210

--- a/experiments_with_algorithms.tex
+++ b/experiments_with_algorithms.tex
@@ -961,7 +961,7 @@ $n \log n$ 程序性能之间的差距急剧加大.
 约束条件可以用一张图来表示, 图中的每个结点都用名字标记, 如果结点 \textit{x}
 必须先于 \textit{y} 出现, 那么就有一条边, 从 \textit{x} 指向 \textit{y}.
 下面这张图就是一个例子:
-% TODO 图片应该居中
+% FIXME 图片应该居中才对
 \begin{center}
 \xymatrix {
     *++=[o][F]{\texttt{a}}\ar"2,3"
