review stop at page 171/210

--- a/experiments_with_algorithms.tex
+++ b/experiments_with_algorithms.tex
@@ -1024,14 +1024,15 @@ $n \log n$ 程序性能之间的差距急剧加大.
 来确定不含有前驱的结点的处理顺序, 以一种 ``广度优先'' 的方式进行.
 当所有的结点都被读取完毕后, 一个循环体计算结点的数量, 并把所有的, 没有 
 前驱的结点插入到队列中. 第二个循环体移除队列的第一个结点, 打印该结点的
-名字, 然后递减它的每一个后继结点的前驱个数. 如果某一个后继结点的前驱
-个数变为 0, 那就把这个后继结点插入到队尾. 当队列变成空, 并且所有的结点
+名字, 然后递减它的每一个后继结点的前驱结点个数. 如果某一个后继结点的前驱
+结点个数变为 0, 那就把这个后继结点插入到队尾. 当队列变成空, 并且所有的结点
 都被访问过, 这时候拓扑排序就完成了. 但是, 如果有某些结点从未被插入到队
 列中, 那就说明这些结点在一个环中, 因此无法对该图进行拓扑排序. 如果图中
 不存在环, 那么被打印出来的结点序列就是一个拓扑排序.
 
 \texttt{tsort} 的前三条语句从输入中读取 \mbox{前驱}-后继 对, 并构造一个
 后继列表数据结构, 就像:
+\begin{center}
 \begin{tabular}{c|c|c|l}
     \hline
     \hline
@@ -1048,6 +1049,7 @@ $n \log n$ 程序性能之间的差距急剧加大.
     \texttt{i}  & 1 & 1 & \texttt{b}  \\
     \hline
 \end{tabular}
+\end{center}
 
 数组 \texttt{pcnt} 和 \texttt{scnt} 记录每个结点的前驱结点与后继结点个数,
 \texttt{slist[}\textit{x}\texttt{,}\textit{i}\texttt{]} 给出了结点 
