complete a TODO in page 97/210

--- a/reports_and_databases.tex
+++ b/reports_and_databases.tex
@@ -411,10 +411,11 @@ are, then do the positioning for you.}. 为打印程序写一个 awk 程序, 该
     }
 \end{awkcode}
 \marginpar{97}
-如果把 \verb'form4' 的输出输送给 \verb'tbl', 输出的表格是\footnote{TODO}:
-% TODO
-\begin{shell}
-\end{shell}
+如果把 \verb'form4' 的输出输送给 \verb'tbl', 输出的表格是:
+% TODO 应该用 LaTeX 来生成下面这张报表
+\begin{center}
+    \includegraphics[scale=0.7]{./images/report3.png}
+\end{center}
 
 如果可能的话, 我们建议构造一个程序来格式化表格, 实现一个像 \verb'tbl' 这样 
 复杂的程序的确很有野心, 但不妨让我们从一个小程序开始: 这个程序以左对齐的
