complete 1/3 of index in page 209/210

--- a/index.tex
+++ b/index.tex
@@ -648,6 +648,7 @@ field separator, newline as 61, 83-84
 
 field separator, output 6, 35, 39, 55-56
 
+\marginpar{207}
 field separator, regular expression 52, 60, 80, 135
 
 field variables 35
@@ -1016,6 +1017,7 @@ leap year computation 194
 
 leftmost longest match 42, 60, 80
 
+\marginpar{208}
 \verb'length' function 13-14
 
 letters, form 100
@@ -1379,4 +1381,441 @@ primary expressions 34
 
 \verb'printf' specifications, summary of 189
 
+\marginpar{208}
+
+\verb'printf' specifications, table of 57
+
+
+\verb'printf' statement 7, 24, 56, 98
+
+printing a blank line II, 55
+
+printing checks 74
+
+printing error messages 59
+
+\verb'printprof' program 168
+
+priority queue 162
+
+processor, \verb'#lnclude' 62, 64
+
+profiling 167
+
+profiling heapsort 168-169
+
+program, \verb'addcomma' 72, 194
+
+program, \verb'arith' 117
+
+program, \verb'asm' 134, 203
+
+program, \verb'awk.parser' 149
+
+program, batch sort test 155
+
+program, \verb'bridge' 199
+
+program, \verb'bundle' 81
+
+program, \verb'calc1' 143
+
+program, \verb'calc2' 144
+
+program, \verb'calc3' 146
+
+program, \verb'check1' 87
+
+program, \verb'check2' 87
+
+program, \verb'check3' 88
+
+program, \verb'checkgen' 79
+
+program, \verb'cliche' 113
+
+program, \verb'colcheck' 77
+
+program, \verb'compat' 80
+
+program, \verb'echo' 63
+
+program, \verb'field' 66
+
+program, \verb'fmt' 120
+
+program, \verb'fiat.just' 202
+
+program, \verb'form1' 91
+
+program, \verb'form2' 92
+
+program, \verb'form3' 94
+
+program, \verb'form4' 96
+
+program \verb'format' 11, 22, 34, 47, 53, 188
+
+program, \verb'form.gen' 101
+
+program \verb'generation' v, 79, 121, 167
+
+program, \verb'graph' 137
+
+program, \verb'histogram' 70, 193
+
+program, \verb'info' 100
+
+program, \verb'interest' 15
+
+program, \verb'ix.collapse' 126
+
+program, \verb'ix.format' 129
+
+program, \verb'ix.genkey' 128
+
+program, \verb'ix.rotate' 127
+
+program, \verb'ix.sort1' 126
+
+program, \verb'ix.sort2' 128
+
+program, \verb'join' 104
+
+program, \verb'kwic' 123. 203
+
+program, \verb'make' 178
+
+program, \verb'makeprof' 167
+
+program, \verb'nm.format' 74
+
+program, \verb'p12check' 77
+
+program, \verb'passwd' 78
+
+program, \verb'percent' 70
+
+program, \verb'prchecks' 75
+
+program, \verb'prep1' 90
+
+program, \verb'prep2' 91
+
+program, \verb'prep3' 93
+
+program, \verb'printprof' 168
+
+program, \verb'qawk' 109
+
+program, \verb'quiz' 118
+
+program, \verb'rtsort' 174
+
+program, \verb'sentgen' 115,200-201
+
+program, \verb'seq' 64
+
+program, \verb'sortgen' 141
+
+program, \verb'sum1' 68
+
+program, \verb'sum2' 68
+
+program, \verb'sum3' 69
+
+
+
+program, suncomma 71
+
+program, table 98
+
+program, table 1 196
+
+program, test framework 159
+
+program, transpose 204
+
+program, tsort 172
+
+program, unbundle 82
+
+program, word count 14, 119
+
+program, wordfreq 119
+
+program, xref 122
+
+prompt character 2
+
+prototyping iii, v, 78, 152, 185
+
+pseudo-code iv, 153
+
+ptx command 123
+
+pushback, input 105, 110
+
+q query language 102. 107
+
+qawk program 109
+
+qawk query processor 108
+
+qsort function 161
+
+quadratic algorithm 157.162,
+
+183
+
+query language 99
+
+queue 171
+
+queue, priority 162
+
+quicksort algorithm 160
+
+quicksort partitioning step 160
+
+quicksort performance 162
+
+quiz program 118
+
+quotes, '' 2, 4-5. 65, 100
+
+quoting in regular expressions
+
+29-30, 41. 43
+
+rand function 40, HI
+
+rand, initializing 111 ,
+
+randint function 111
+
+randlet function 112
+
+random sentences 113
+
+range pattern 32. 85. 187
+
+record separator, output 6. 55-56,
+
+83
+
+record variable, $0 5, 35
+
+records, lines versus 21,60
+
+records, multiline iv, 60-61,82
+
+records with headers 85
+
+recursion elimination 200, 204
+
+recursive function 54, 71. 76, 115,
+
+160
+
+recursive-descent parsing 145,
+
+147-148
+
+redirection, > output 56, 58, 188
+
+redirection, >> output 56, 58, 188
+
+redirection, ! output 58, 188
+
+regular expression, . 28
+
+regular expression, S 28, 119
+
+regular expression, ' 28, 119
+
+regular expression, () 29
+
+regular expression, [...] 29
+
+regular expression, [*...] 29
+
+regular expression, I 29. 32
+
+regular expression, • 30
+
+regular expression, + 30
+
+regular expression, ? 30
+
+regular expression character class
+
+29
+
+regular expression, concatenation
+
+in 29
+
+regular expression, dynamic 40,
+
+101. 184
+
+regular expression examples 30
+
+regular expression field separator
+
+52. 60, 80. 135
+
+regular expression for 
+
+floatingpoint number 30, 40
+
+
+
+regular expression metacharacters
+
+28, 191
+
+regular expression operators,
+
+precedence of 30
+
+regular expressions in data 118
+
+regular expressions, quoting in
+
+29-30,41,43
+
+regular expressions, strings as 40
+
+regular expressions, summary of
+
+28, 191
+
+regular expressions, table of 32
+
+relation, universal 107
+
+relational databases iv, 102
+
+relational operators 25, 37
+
+relf ile database description
+
+106
+
+remainder operator, X 36,46
+
+report generation 89
+
+return statement 53
+
+reverse input line order 50
+
+reverse program 16-17
+
+reverse-Polish notation 142
+
+REXX language 186
+
+Ritchie, D. M. 66, 186
+
+RLEN6TH variable 35-36,41
+
+rounding to nearest integer 40
+
+RS variable 36, 60, 83-84
+
+RSTART variable 35-36,41.189
+
+rtsort program 174
+
+rules for variable names 35
+
+running an awk program 3
+
+running time of awk programs
+
+183
+
+scaffolding 153. 156, 179
+
+scalar parameter 54
+
+Schmitt, G. vi
+
+scientific notation 35
+
+Scribe formatter 124
+
+sed command v, 181, 184, 186
+
+self-identifying data 86
+
+semicolon 11. 22, 34, 47. 53. 187
+
+semicolon as empty statement 50
+
+semicolon before else 47
+
+sentence generation 114
+
+sentences, random 113
+
+sentgen program 115, 200-201
+
+separator, blank line 83
+
+separator, default field 5, 24
+
+separator, input field 24, 35, 39,
+
+60
+
+separator, output Held 6, 35. 39,
+
+55-56
+
+separator, output record 6, 55-56.
+
+83
+
+seq program 64
+
+Sethi, R. 130, 152, 186
+
+shell command interpreter 4, 65,
+
+99
+
+side-effects of assignment 43
+
+side-effects of getline 61
+
+side-efTects of input 35
+
+side-effects of sub 43
+
+side-effects of test 52,192
+
+side-effects on SO 36, 43
+
+side-effects on NF 36, 61
+
+sin function 39
+
+SNOBOL4 language SO, 182, 186
+
+sort command 8. 58, 84. 90
+
+sort key 91. 127. 140
+
+sort options 90, 94, 124. 126,
+
+140
+
+sort options, avoiding 91, 140
+
+
 \end{multicols}
+
